--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "support-desk",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "description": "support ticket app",
   "main": "server.js",
   "scripts": {
