--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "16.x"
   },
   "description": "support ticket app",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
